--- a/settings.json
+++ b/settings.json
@@ -3,15 +3,15 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"NamaBot":"Sanzy Bot Assistan", 
-"ownerNumber": "6281276698054@s.whatsapp.net",
-"NomorOwner":"6281276698054", 
-"NomorOwner2":"082183086471", 
-"NamaOwner":"SANZY YTゑ", 
-"NamaOwner2":"Dian Pratamaゑ", 
-"Dana":"081276698054", 
-"Pulsa":"081276698054", 
-"Gopay":"085761413369", 
+"NamaBot":"Xrzzzbotzz", 
+"ownerNumber": "6283830815715@s.whatsapp.net",
+"NomorOwner":"6283830815715", 
+"NomorOwner2":"082124245042", 
+"NamaOwner":"Xarzz", 
+"NamaOwner2":"Xarzz2", 
+"Dana":"082124245042", 
+"Pulsa":"083830815715", 
+"Gopay":"082124245042", 
 "kurrxdkey":"KurrXKey",
 "lolkey":"KurrApi09",
 "gcount": 20
